tests/stderr-snapshots/integration__integration__time_label_compilation__non_const.snap
---
source: tests/integration/time_label_compilation.rs
expression: stderr
---
error: const evaluation error in time label
   ┌─ <input>:11:5
   │
11 │     +I0: nop();
   │     ^^^ non-const expression


